Fix image source in index.html
Updated image source path to a relative URL.

--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
         <p>So… wanna make this movie happen?” 🎥✨</p>
 
         <!-- Replace the image below with your own link -->
-        <img src="C:\Users\zahar\OneDrive\Desktop\New folder (2)\img.jpg" alt="Movie Date Image">
+        <img src="img.jpg" alt="Movie Date Image">
 
         <div class="footer">— Written, directed, and starring: Us 💕</div>
     </div>
 </body>
 </html>
+
