Change image source in index.html
Updated the image source link in the HTML.

--- a/index.html
+++ b/index.html
@@ -56,10 +56,11 @@
         <p>So… wanna make this movie happen?” 🎥✨</p>
 
         <!-- Replace the image below with your own link -->
-        <img src="img.jpg" alt="Movie Date Image">
+        <img src="https://andreiz98.github.io/movie-date/img.jpg" alt="Movie Date Image">
 
         <div class="footer">— Written, directed, and starring: Us 💕</div>
     </div>
 </body>
 </html>
+
 
