Update image source URL in index.html

--- a/second/index.html
+++ b/second/index.html
@@ -70,7 +70,7 @@
     Scene 6: Romance, chaos, and maybe dessert. 🍰❤️</p>
 
     <!-- Replace with your own image -->
-    <img src="https://yourusername.github.io/movie-date/img1.jpg" alt="The Sequel Image" />
+    <img src="https://andreiz98.github.io/movie-date/img1.jpg" alt="The Sequel Image" />
 
     <div class="footer">— A production by Us 💘</div>
   </div>
