Add hidden music iframe to index.html
Added hidden music iframe for autoplay feature.

--- a/first/index.html
+++ b/first/index.html
@@ -60,8 +60,19 @@
 
         <div class="footer">— Written, directed, and starring: Us 💕</div>
     </div>
+
+    <!-- Hidden music -->
+	<iframe
+	  width="0"
+	  height="0"
+	  src="https://www.youtube.com/embed/es3whnk66LM?autoplay=1&loop=1&playlist=es3whnk66LM"
+	  frameborder="0"
+	  allow="autoplay"
+	></iframe>
+    
 </body>
 </html>
+
 
 
 
