--- a/first/index.html
+++ b/first/index.html
@@ -4,55 +4,84 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Movie Date 🎬❤️</title>
-    <style>
-        body {
+     <style>
+		body {
             background: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
             font-family: 'Segoe UI', sans-serif;
             text-align: center;
             color: #222;
             padding: 40px 20px;
-        }
-        .card {
+		}
+		
+		.card {
             background: white;
             border-radius: 20px;
-            box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
             padding: 30px;
             max-width: 450px;
             margin: auto;
             animation: fadeIn 1.5s ease-in-out;
+			text-shadow: 1px 1px 2px rgba(255,255,255,0.5);
         }
-        img {
-            border-radius: 15px;
-            width: 100%;
-            max-width: 320px;
-            margin-top: 20px;
-        }
-        h2 {
-            color: #e63946;
-        }
-        p {
-            font-size: 1.1em;
-            margin-top: 15px;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-        .footer {
-            margin-top: 25px;
-            font-size: 0.9em;
-            color: #444;
-        }
-    </style>
+
+		h2, p {
+		  opacity: 0;
+		  transform: translateY(50px);
+		  animation: slideUp 1s ease forwards;
+		}
+
+		h2 { animation-delay: 0.2s; }
+		  p:nth-of-type(1) { animation-delay: 1s; }
+		  p:nth-of-type(2) { animation-delay: 2s; }
+		  p:nth-of-type(3) { animation-delay: 3s; }
+		  p:nth-of-type(4) { animation-delay: 4s; }
+		  
+		@keyframes slideUp {
+		  0% { opacity: 0; transform: translateY(50px); }
+		  100% { opacity: 1; transform: translateY(0); }
+		}
+
+		img {
+		  margin-top: 20px;
+		  border-radius: 15px;
+		  width: 250px;
+		  opacity: 0;
+		  transform: scale(0.9);
+		  animation: fadeIn 1s ease forwards;
+		  animation-delay: 5s;
+		}
+		
+		.footer {
+			opacity: 0;
+			transform: translateY(50px);
+			animation: slideUp 1s ease forwards;
+			animation-delay: 6s;  /* show after image */
+			font-style: italic;
+			margin-top: 30px;
+		}
+
+		@keyframes fadeIn {
+		  to { opacity: 1; transform: scale(1); }
+		}
+
+		#tap {
+		  margin-top: 40px;
+		  opacity: 0;
+		  animation: fadeIn 1s ease forwards;
+		  animation-delay: 3.5s;
+		  cursor: pointer;
+		  font-size: 18px;
+		  color: #ff4081;
+		}
+  </style>
 </head>
-<body>
+<body onclick="playMusic()" style="cursor:pointer;">
     <div class="card">
         <h2>🎞️ Our Movie Date</h2>
 
-        <p>Scene 1: You say yes.<br>
-        Scene 2: We go on a date.<br>
-        Scene 3: Credits roll — <strong>Best Couple Ever ❤️</strong></p>
-
+        <p>Scene 1: You say yes.</p>
+        <p>Scene 2: We go on a date 🍝</p>
+		<p>Scene 3: Credits roll — “Best Couple Ever” 🎬❤️</p>
         <p>So… wanna make this movie happen?” 🎥✨</p>
 
         <!-- Replace the image below with your own link -->
@@ -60,19 +89,21 @@
 
         <div class="footer">— Written, directed, and starring: Us 💕</div>
     </div>
+	
+	<div id="music"></div>
 
-    <!-- Hidden music -->
-	<iframe
-	  width="0"
-	  height="0"
-	  src="https://www.youtube.com/embed/es3whnk66LM?autoplay=1&loop=1&playlist=es3whnk66LM"
-	  frameborder="0"
-	  allow="autoplay"
-	></iframe>
-    
+  <script>
+    function playMusic() {
+      const iframe = document.createElement("iframe");
+      iframe.width = "0";
+      iframe.height = "0";
+      iframe.src = "https://www.youtube.com/embed/es3whnk66LM?autoplay=1&loop=1&playlist=es3whnk66LM";
+      iframe.frameBorder = "0";
+      iframe.allow = "autoplay";
+      document.getElementById("music").appendChild(iframe);
+      document.body.onclick = null; // only run once
+    }
+  </script>
+	
 </body>
 </html>
-
-
-
-
