--- a/first/index.html
+++ b/first/index.html
@@ -97,13 +97,16 @@
       const iframe = document.createElement("iframe");
       iframe.width = "0";
       iframe.height = "0";
-      iframe.src = "https://www.youtube.com/embed/es3whnk66LM?autoplay=1&loop=1&playlist=es3whnk66LM";
+      iframe.src = "https://www.youtube.com/embed/es3whnk66LM?autoplay=1&loop=1&playlist=es3whnk66LM&mute=1";
       iframe.frameBorder = "0";
-      iframe.allow = "autoplay";
+      iframe.allow = "autoplay; encrypted-media";
+      iframe.allowFullscreen = true;
       document.getElementById("music").appendChild(iframe);
+
       document.body.onclick = null; // only run once
     }
   </script>
 	
 </body>
 </html>
+
