--- a/second/index.html
+++ b/second/index.html
@@ -13,67 +13,97 @@
       padding: 40px 20px;
     }
     .card {
-      background: white;
-      border-radius: 20px;
-      box-shadow: 0 6px 20px rgba(0,0,0,0.15);
-      padding: 30px;
-      max-width: 450px;
-      margin: auto;
-      animation: fadeIn 1.5s ease-in-out;
-    }
-    img {
-      border-radius: 15px;
-      width: 100%;
-      max-width: 320px;
-      margin-top: 20px;
-    }
-    h2 {
-      color: #1d3557;
-    }
-    p {
-      font-size: 1.1em;
-      margin-top: 15px;
-    }
-    .button {
-      margin-top: 25px;
-      padding: 12px 25px;
-      background: #1d3557;
-      color: white;
-      font-weight: bold;
-      border: none;
-      border-radius: 12px;
-      font-size: 1em;
-      cursor: pointer;
-      text-decoration: none;
-      display: inline-block;
-    }
-    .button:hover {
-      background: #457b9d;
-    }
-    .footer {
-      margin-top: 20px;
-      font-size: 0.9em;
-      color: #444;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
+            background: white;
+            border-radius: 20px;
+            box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+            padding: 30px;
+            max-width: 450px;
+            margin: auto;
+            animation: fadeIn 1.5s ease-in-out;
+			text-shadow: 1px 1px 2px rgba(255,255,255,0.5);
+        }
+
+		h2, p {
+		  opacity: 0;
+		  transform: translateY(50px);
+		  animation: slideUp 1s ease forwards;
+		}
+
+		h2 { animation-delay: 0.2s; }
+		  p:nth-of-type(1) { animation-delay: 1s; }
+		  p:nth-of-type(2) { animation-delay: 2s; }
+		  p:nth-of-type(3) { animation-delay: 3s; }
+		  p:nth-of-type(4) { animation-delay: 4s; }
+		  
+		@keyframes slideUp {
+		  0% { opacity: 0; transform: translateY(50px); }
+		  100% { opacity: 1; transform: translateY(0); }
+		}
+
+		img {
+		  margin-top: 20px;
+		  border-radius: 15px;
+		  width: 250px;
+		  opacity: 0;
+		  transform: scale(0.9);
+		  animation: fadeIn 1s ease forwards;
+		  animation-delay: 5s;
+		}
+		
+		.footer {
+			opacity: 0;
+			transform: translateY(50px);
+			animation: slideUp 1s ease forwards;
+			animation-delay: 6s;  /* show after image */
+			font-style: italic;
+			margin-top: 30px;
+		}
+
+		@keyframes fadeIn {
+		  to { opacity: 1; transform: scale(1); }
+		}
+
+		#tap {
+		  margin-top: 40px;
+		  opacity: 0;
+		  animation: fadeIn 1s ease forwards;
+		  animation-delay: 3.5s;
+		  cursor: pointer;
+		  font-size: 18px;
+		  color: #ff4081;
+		}
   </style>
 </head>
 <body>
   <div class="card">
     <h2>🎞️ Our Movie Date — The Sequel</h2>
 
-    <p>Scene 4: You said yes — now there’s no turning back! 🚀<br>
-    Scene 5: Prepare for Mission: Possible — Operation Date Night. 🍿💥<br>
-    Scene 6: Romance, chaos, and maybe dessert. 🍰❤️</p>
-
-    <!-- Replace with your own image -->
+    <p>Scene 4: You said yes — now there’s no turning back! 🚀</p>
+    <p>Scene 5: Prepare for Mission: Possible — Operation Date Night. 🍿💥</p>
+    <p>Scene 6: Romance, chaos, and maybe dessert. 🍰❤️</p>
+    
     <img src="https://andreiz98.github.io/myRepo/img1.jpg" alt="The Sequel Image" />
 
     <div class="footer">— A production by Us 💘</div>
   </div>
+
+  <audio autoplay loop id="bg-music">
+	  <source src="https://andreiz98.github.io/myRepo/music1.mp3" type="audio/mpeg">
+	  Your browser does not support the audio element.
+	</audio>
+
+	<script>
+	  const audio = document.getElementById('bg-music');
+	  audio.volume = 0;
+
+	  const fadeIn = setInterval(() => {
+		if (audio.volume < 0.2) {
+		  audio.volume = Math.min(audio.volume + 0.02, 0.2);
+		} else {
+		  clearInterval(fadeIn);
+		}
+	  }, 300);
+	</script>
 
 </body>
 </html>
