--- a/first/index.html
+++ b/first/index.html
@@ -91,24 +91,44 @@
 	
 	<audio autoplay loop id="bg-music">
 	  <source src="https://andreiz98.github.io/myRepo/music.mp3" type="audio/mpeg">
-	  Your browser does not support the audio element.
 	</audio>
 
-	<script>
-	  const audio = document.getElementById('bg-music');
-	  audio.volume = 0;
+	<div id="tap-overlay" style="
+    position:fixed; top:0; left:0; width:100%; height:100%;
+    z-index:10; cursor:pointer;
+  	"></div>
 
-	  // Gradually increase volume
-	  const fadeIn = setInterval(() => {
-		if (audio.volume < 0.2) {
-		  audio.volume = Math.min(audio.volume + 0.02, 0.2); // fade to 20%
-		} else {
-		  clearInterval(fadeIn);
-		}
-	  }, 300);
-	</script>
+  <script>
+    const audio = document.getElementById('bg-music');
+    const overlay = document.getElementById('tap-overlay');
+
+    function fadeInMusic(targetVolume = 0.2, step = 0.02, interval = 300) {
+      audio.volume = 0;
+      const fade = setInterval(() => {
+        if (audio.volume < targetVolume) {
+          audio.volume = Math.min(audio.volume + step, targetVolume);
+        } else {
+          clearInterval(fade);
+        }
+      }, interval);
+    }
+
+    function tryAutoPlay() {
+      audio.play().then(() => {
+        fadeInMusic();
+        overlay.style.display = 'none';
+      }).catch(() => {
+        overlay.style.display = 'block';
+      });
+    }
+
+    overlay.addEventListener('click', () => {
+      audio.play().then(() => fadeInMusic());
+      overlay.style.display = 'none';
+    });
+
+    tryAutoPlay();
+  </script>
 	
 </body>
 </html>
-
-
