Fix HTML encoding issues in index.html

--- a/first/index.html
+++ b/first/index.html
@@ -75,8 +75,7 @@
 		}
   </style>
 </head>
-<body style="cursor:pointer;">
-
+<body>
    <div id="click-to-play" style="
     position:fixed;
     top:0; left:0;
@@ -92,7 +91,7 @@
     <h2>🎞️ How Our Movie Begin...</h2>
   </div>
 
-  <div class="card" id="card">
+  <div class="card" id="card" style="opacity:0; transition: opacity 1s;">
         <p>Scene 1: You say yes.</p>
         <p>Scene 2: We go on a date 🍝</p>
 		<p>Scene 3: Credits roll — “Best Couple Ever” 🎬❤️</p>
@@ -139,3 +138,4 @@
 	
 </body>
 </html>
+
