Fix HTML encoding and improve card display logic

--- a/first/index.html
+++ b/first/index.html
@@ -91,7 +91,7 @@
     <h2>🎞️ How Our Movie Begin...</h2>
   </div>
 
-  <div class="card" id="card" style="opacity:0; transition: opacity 1s;">
+  <div class="card" id="card" style="display:none; opacity:0; transition: opacity 1s;">
         <p>Scene 1: You say yes.</p>
         <p>Scene 2: We go on a date 🍝</p>
 		<p>Scene 3: Credits roll — “Best Couple Ever” 🎬❤️</p>
@@ -138,4 +138,5 @@
 	
 </body>
 </html>
+
 
